--- a/Virtual Tourist/Base.lproj/LaunchScreen.storyboard
+++ b/Virtual Tourist/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,14 +18,45 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9bM-uD-G9t">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage-Background" translatesAutoresizingMaskIntoConstraints="NO" id="fTs-j2-Rrb">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="fTs-j2-Rrb" secondAttribute="trailing" id="5kg-ni-yCm"/>
+                                    <constraint firstItem="fTs-j2-Rrb" firstAttribute="centerX" secondItem="9bM-uD-G9t" secondAttribute="centerX" id="8wF-pu-hji"/>
+                                    <constraint firstItem="fTs-j2-Rrb" firstAttribute="top" secondItem="9bM-uD-G9t" secondAttribute="top" id="Yzv-dL-f0K"/>
+                                    <constraint firstItem="fTs-j2-Rrb" firstAttribute="centerY" secondItem="9bM-uD-G9t" secondAttribute="centerY" id="aO8-oi-caG"/>
+                                    <constraint firstAttribute="bottom" secondItem="fTs-j2-Rrb" secondAttribute="bottom" id="eUC-3I-YAO"/>
+                                    <constraint firstItem="fTs-j2-Rrb" firstAttribute="leading" secondItem="9bM-uD-G9t" secondAttribute="leading" id="tqn-1w-hcw"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9bM-uD-G9t" secondAttribute="trailing" id="1sK-36-R96"/>
+                            <constraint firstItem="9bM-uD-G9t" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Bkt-kj-N0o"/>
+                            <constraint firstItem="9bM-uD-G9t" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="MIh-hs-yyc"/>
+                            <constraint firstItem="9bM-uD-G9t" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="QNv-ve-ZcW"/>
+                            <constraint firstItem="9bM-uD-G9t" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="muf-i8-gTU"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="9bM-uD-G9t" secondAttribute="bottom" id="wGY-Qg-Vaw"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="167" y="15"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchImage-Background" width="621" height="1104"/>
+    </resources>
 </document>
