--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -148,7 +148,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell clipsSubviews="YES" contentMode="center" reuseIdentifier="PhotoCell" id="y0d-h7-BPQ">
+                                    <collectionViewCell clipsSubviews="YES" contentMode="center" reuseIdentifier="PhotoCell" id="y0d-h7-BPQ" customClass="Cell" customModule="Virtual_Tourist" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="264"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -165,23 +165,19 @@
                                                                 <constraint firstAttribute="width" secondItem="P1z-An-LvH" secondAttribute="height" multiplier="1:1" id="APu-IU-fwa"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jat-Dk-wV9" userLabel="Select Photo">
-                                                            <rect key="frame" x="158" y="4" width="30" height="30"/>
-                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="30" id="oWO-zx-aPM"/>
-                                                                <constraint firstAttribute="height" constant="30" id="uoT-xz-vLw"/>
-                                                            </constraints>
-                                                        </button>
+                                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Cir-nf-JHJ" userLabel="Activity Indicator">
+                                                            <rect key="frame" x="78" y="78" width="37" height="37"/>
+                                                            <color key="color" red="0.76078431372549016" green="0.78431372549019607" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </activityIndicatorView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstItem="P1z-An-LvH" firstAttribute="centerX" secondItem="waP-E2-62U" secondAttribute="centerX" id="4OQ-jA-DFh"/>
-                                                        <constraint firstItem="Jat-Dk-wV9" firstAttribute="top" secondItem="waP-E2-62U" secondAttribute="top" constant="4" id="DsK-cG-hF6"/>
+                                                        <constraint firstItem="Cir-nf-JHJ" firstAttribute="centerY" secondItem="waP-E2-62U" secondAttribute="centerY" id="HKk-yo-UQS"/>
                                                         <constraint firstItem="P1z-An-LvH" firstAttribute="top" secondItem="waP-E2-62U" secondAttribute="top" constant="4" id="Huv-AM-NMs"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Jat-Dk-wV9" secondAttribute="trailing" constant="4" id="NT4-wu-aRx"/>
                                                         <constraint firstItem="P1z-An-LvH" firstAttribute="leading" secondItem="waP-E2-62U" secondAttribute="leading" constant="4" id="NdA-kT-65d"/>
                                                         <constraint firstAttribute="width" secondItem="waP-E2-62U" secondAttribute="height" multiplier="1:1" id="Roo-99-dgD"/>
+                                                        <constraint firstItem="Cir-nf-JHJ" firstAttribute="centerX" secondItem="waP-E2-62U" secondAttribute="centerX" id="YT4-JD-MZ0"/>
                                                         <constraint firstAttribute="bottom" secondItem="P1z-An-LvH" secondAttribute="bottom" constant="4" id="hfJ-Ma-QPE"/>
                                                         <constraint firstItem="P1z-An-LvH" firstAttribute="centerY" secondItem="waP-E2-62U" secondAttribute="centerY" id="ksg-ug-9sl"/>
                                                         <constraint firstAttribute="trailing" secondItem="P1z-An-LvH" secondAttribute="trailing" constant="4" id="tm5-PM-Arg"/>
@@ -221,6 +217,11 @@
                                             <constraint firstAttribute="trailing" secondItem="waP-E2-62U" secondAttribute="trailing" constant="4" id="d3n-tn-Xr7"/>
                                             <constraint firstAttribute="bottom" secondItem="9z6-1F-pNk" secondAttribute="bottom" constant="4" id="yoh-A7-kCY"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="indicator" destination="Cir-nf-JHJ" id="owy-A3-CdD"/>
+                                            <outlet property="thumbnail" destination="P1z-An-LvH" id="l9k-ME-U0W"/>
+                                            <outlet property="title" destination="GL0-UO-gk7" id="HI9-pd-Qqj"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -231,7 +232,7 @@
                                     <constraint firstAttribute="height" constant="64" id="V65-Gb-WRl"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84j-pr-wod" userLabel="Hint">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84j-pr-wod" userLabel="Hint">
                                 <rect key="frame" x="0.0" y="564" width="414" height="64"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
